--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
                 <div class="text-1">Hello, my name is</div>
                 <div class="text-2">Sakib Bin Rofik</div>
                 <div class="text-3">And I'm a Junior Web Devloper</div>
-                <a href="#">Hire me</a>
+                <a href="#" class="text-4">Hire me</a>
             </div>
         </div>
     </section>
